Fixed media query that preferred dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,16 +16,6 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
-}
-
 .editDeleteIcon {
   cursor: pointer;
   color: #1976d2;
